fixed broken stylesheet

--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ h3 {
   top:10;
   float:left;
 }
-<<<<<<< Updated upstream
 hr {
   border:none;
   height:5px;
@@ -57,17 +56,9 @@ hr {
   margin-right:5px;
   font-size:12px;
   font-weight:bold;
-=======
+}
 select{
   width: 200px;
-}
-#icon_1,#icon_2{
-  padding-top:0px;
-  padding-left:0px;
-  width:50px;
-  height:50px;
->>>>>>> Stashed changes
-  float:left;
 }
 #inputRow{
   width: 100%;
